<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_date_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/alert_date_message"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/alert_date_dialog_message2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bsdatetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_date_dialog_bsdate"
            android:textColor="@color/colorRead"/>

        <TextView
            android:id="@+id/bsdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRead"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/terminaltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_date_dialog_termdate"
            android:textColor="@color/colorGreen"/>

        <TextView
            android:id="@+id/terminaldate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/alert_date_dialog_warning"/>

</LinearLayout>