<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

>

    <TextView
        android:id="@+id/addterminaltogroup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/alert_dialog_append_group"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/addterminaltogroup_subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/addterminaltogroup_title">
    <TextView
        android:text="@string/alert_dialog_append_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/addterminaltogroup"
        android:text="@string/alert_dialog_add_terminal_ok2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    </LinearLayout>
    <ListView
        android:layout_below="@+id/addterminaltogroup_subtitle"
        android:id="@+id/add_to_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</RelativeLayout>