<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/actmain"
    android:orientation="horizontal"
    tools:context="jp.co.nassua.nervenet.voicemessage.ActMain">

    <Button
        android:id="@+id/button"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/tel_small"
        android:onClick="onClick"
        android:text="@string/main_menu1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/rec_small"
        android:onClick="onClick"
        android:text="@string/main_menu2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/play_small"
        android:onClick="onClick"
        android:text="@string/main_menu3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="313dp"
        android:layout_height="76dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="73dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/chat_small"
        android:onClick="onClick"
        android:text="@string/group_chat_title" />

</RelativeLayout>
